force-app/main/default/objects/Class__c/fields/COD__c.field-meta.xml
<CustomField>
    <fullName>COD__c</fullName>
    <label>COD</label>
    <type>Date</type>
</CustomField>