force-app/main/default/objects/Class__c/fields/Count_Book__c.field-meta.xml
<CustomField>
    <fullName>Count_Book__c</fullName>
    <label>Count Book</label>
    <summaryForeignKey>Book__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>