force-app/main/default/objects/Class__c/fields/FixedSettlementLocalTaxtBuildingPortion1__c.field-meta.xml
<CustomField>
    <fullName>FixedSettlementLocalTaxtBuildingPortion1__c</fullName>
    <label>Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>