force-app/main/default/objects/Class__c/fields/Total_Female__c.field-meta.xml
<CustomField>
    <fullName>Total_Female__c</fullName>
    <label>Total Female</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>