force-app/main/default/objects/Class__c/fields/Total_Male__c.field-meta.xml
<CustomField>
    <fullName>Total_Male__c</fullName>
    <label>Total Male</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>