force-app/main/default/objects/Class__c/fields/TotalStudent__c.field-meta.xml
<CustomField>
    <fullName>TotalStudent__c</fullName>
    <formula>Total_Female__c+Total_Male__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalStudent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>